--- a/index.html
+++ b/index.html
@@ -28,37 +28,91 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h2>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome</h2>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Teacher's Assistant / Grader</h3>
+<h4>The Master's College Computer Science Department</h4>
+<h4>August 2014 - present</h4>
+<h4>Santa Clarita, CA</h4>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>Primarily, this job encompasses the various aspects of grading homework and tests for the Computer Science Department at The Master’s College. Some of the tasks I regularly perform are collecting and organizing assignments from students, creating new grading rubrics for classes, uploading grades online for student viewing, providing feedback on assignments, and interacting with and learning from professors.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>Assembler</h3>
+<h4>Southwest Antennas</h4>
+<h4>July 2014 - August 2014</h4>
+<h4>San Diego, CA</h4>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>My job as an assembler consisted of the assembly of various broadband and array antennas used in law enforcement and military equipment, geological earthquake and weather monitors, and surveillance equipment. I assembled many kinds of antennas from different stages of the production stage, most often involving soldering components together. </p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h3>Mailroom Clerk</h3>
+<h4>The Master's College Mailroom</h4>
+<h4>August 2013 - May 2014</h4>
+<h4>Santa Clarita, CA</h4>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>This job encompassed all aspects of mail delivery including pickup/drop off from U.S. Post Office, sorting, and delivering, along with inter-campus mail to staff and students. I prepared packages for shipment, scanned and logged packages. This job requires strong customer service skills and cash handling.</p>
+
+<h3>Athletic Field Worker</h3>
+<h4>The Master's College Athletic Department</h4>
+<h4>August 2013 - May 2014</h4>
+<h4>Santa Clarita, CA</h4>
+
+<p>My responsibilities included setting up and tearing down equipment for various athletic events, including sports games and meets. Additionally, I was responsible for maintaining and thoroughly cleaning both the fields and gyms before and after events. During events, I also worked in concessions, and sold tickets and merchandise. This job presented me with a diverse work experience, as I worked on tasks ranging from garden-tending and painting to rearranging various work spaces and selling various goods.</p>
+
+<h2>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
+<h3>The Master's College - 2016</h3>
+<h3>Computer Science</h3>
+<h3>GPA - 3.96</h3>
+<h3>President's List - Five semesters running</h3>
+
+<h2>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical</h2>
+
+<h3>Languages</h3>
+<ul>
+    <li>Java</li>
+    <li>Python</li>
+    <li>C#</li>
+    <li>Ruby</li>
+    <li>C++</li>
+    <li>Javascript</li>
+</ul>
+
+<h3>Frameworks</h3>
+<ul>
+    <li>ASP.NET</li>
+    <li>Django</li>
+</ul>
+
+<h3>Databases</h3>
+<ul>
+    <li>Microsoft SQL Server 2012/2014</li>
+</ul>
+
+<h3>Classes taken or currently taking</h3>
+<p>Data Structures, Operating Systems, Computer Networking and Architecture, Computer Hardware, C++ Programming, Web Design, Advanced Networks, Security, and Cryptography, Programming Languages and Systems, Web Application Development, Linux, Computer Organization and Architecture, Intro to Robotics, Software Development, Computer Algorithms</p>
+
+<h2>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h2>
+
+<h3>Raspberry Pi Home Server</h3>
+<h4>www.jtberglund.ddns.net</h4>
+<p>Turned a raspberry pi (model B+) into a home server that provides the functionality of a web server, an FTP server, an NAS server, and provides cloud storage (similar to DropBox). Hosted using Apache web server and implemented using services such as OwnCloud, MySQL, SSH, Samba, Transmission, and Webmin.</p>
+
+<h3>Security Monitoring Application</h3>
+<p>This desktop application was built in Java, with various command-line utilities to access computer information. The application tracks CPU processes and memory usage. Features of the application include a running log of transactions and listings of all open TCP/IP ports and all the applications and processes listening on those ports. Logs in the application include a list of all websites visited by IP address. The application also contains a custom RSS feed from a selected security website and displays headlines of site events.</p>
+
+<h3>Web-based "Guess Who" Game</h3>
+<p>This game is a web-based imitation of the classic board game, “Guess Who,” a turn-based game in which two players face off to guess the other player’s “secret character” through elimination and outright guessing. Website was built using HTML/CSS and ASP.NET on the back-end. </p>
         </section>
 
         <aside id="sidebar">
