--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome</h2>
+          <h1>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome</h1>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -38,46 +38,48 @@
 <h2>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
 
-<h3>Teacher's Assistant / Grader</h3>
-<h4>The Master's College Computer Science Department</h4>
-<h4>August 2014 - present</h4>
-<h4>Santa Clarita, CA</h4>
+<h3 class="sub">Teacher's Assistant / Grader</h3>
+<h4 class="sub">The Master's College Computer Science Department</h4>
+<h4 class="sub">August 2014 - present</h4>
+<h4 class="sub">Santa Clarita, CA</h4>
 
-<p>Primarily, this job encompasses the various aspects of grading homework and tests for the Computer Science Department at The Master’s College. Some of the tasks I regularly perform are collecting and organizing assignments from students, creating new grading rubrics for classes, uploading grades online for student viewing, providing feedback on assignments, and interacting with and learning from professors.</p>
+<p class="subp">Primarily, this job encompasses the various aspects of grading homework and tests for the Computer Science Department at The Master’s College.   Some of the tasks I regularly perform are collecting and organizing assignments from students, creating new grading rubrics for classes, uploading grades online for student viewing, providing feedback on assignments, and interacting with and learning from professors.</p>
 
-<h3>Assembler</h3>
-<h4>Southwest Antennas</h4>
-<h4>July 2014 - August 2014</h4>
-<h4>San Diego, CA</h4>
+<h3 class="sub">Assembler</h3>
+<h4 class="sub">Southwest Antennas</h4>
+<h4 class="sub">July 2014 - August 2014</h4>
+<h4 class="sub">San Diego, CA</h4>
 
 
-<p>My job as an assembler consisted of the assembly of various broadband and array antennas used in law enforcement and military equipment, geological earthquake and weather monitors, and surveillance equipment. I assembled many kinds of antennas from different stages of the production stage, most often involving soldering components together. </p>
+<p class="subp">My job as an assembler consisted of the assembly of various broadband and array antennas used in law enforcement and military equipment, geological earthquake and weather monitors, and surveillance equipment. I assembled many kinds of antennas from different stages of the production stage, most often involving soldering components together. </p>
 
-<h3>Mailroom Clerk</h3>
-<h4>The Master's College Mailroom</h4>
-<h4>August 2013 - May 2014</h4>
-<h4>Santa Clarita, CA</h4>
+<h3 class="sub">Mailroom Clerk</h3>
+<h4 class="sub">The Master's College Mailroom</h4>
+<h4 class="sub">August 2013 - May 2014</h4>
+<h4 class="sub">Santa Clarita, CA</h4>
 
-<p>This job encompassed all aspects of mail delivery including pickup/drop off from U.S. Post Office, sorting, and delivering, along with inter-campus mail to staff and students. I prepared packages for shipment, scanned and logged packages. This job requires strong customer service skills and cash handling.</p>
+<p class="subp">This job encompassed all aspects of mail delivery including pickup/drop off from U.S. Post Office, sorting, and delivering, along with inter-campus mail to staff and students. I prepared packages for shipment, scanned and logged packages. This job requires strong customer service skills and cash handling.</p>
 
-<h3>Athletic Field Worker</h3>
-<h4>The Master's College Athletic Department</h4>
-<h4>August 2013 - May 2014</h4>
-<h4>Santa Clarita, CA</h4>
+<h3 class="sub">Athletic Field Worker</h3>
+<h4 class="sub">The Master's College Athletic Department</h4>
+<h4 class="sub">August 2013 - May 2014</h4>
+<h4 class="sub">Santa Clarita, CA</h4>
 
-<p>My responsibilities included setting up and tearing down equipment for various athletic events, including sports games and meets. Additionally, I was responsible for maintaining and thoroughly cleaning both the fields and gyms before and after events. During events, I also worked in concessions, and sold tickets and merchandise. This job presented me with a diverse work experience, as I worked on tasks ranging from garden-tending and painting to rearranging various work spaces and selling various goods.</p>
+<p class="subp">My responsibilities included setting up and tearing down equipment for various athletic events, including sports games and meets. Additionally, I was responsible for maintaining and thoroughly cleaning both the fields and gyms before and after events. During events, I also worked in concessions, and sold tickets and merchandise. This job presented me with a diverse work experience, as I worked on tasks ranging from garden-tending and painting to rearranging various work spaces and selling various goods.</p>
 
 <h2>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
-<h3>The Master's College - 2016</h3>
-<h3>Computer Science</h3>
-<h3>GPA - 3.96</h3>
-<h3>President's List - Five semesters running</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link">
+</span></a>Education</h2>
+
+<h3 class="sub">The Master's College - 2016</h3>
+<h3 class="sub">Computer Science</h3>
+<h3 class="sub">GPA - 3.96</h3>
+<h3 class="sub">President's List - Five semesters running</h3>
 
 <h2>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical</h2>
 
-<h3>Languages</h3>
+<h3 class="sub">Languages</h3>
 <ul>
     <li>Java</li>
     <li>Python</li>
@@ -87,32 +89,32 @@
     <li>Javascript</li>
 </ul>
 
-<h3>Frameworks</h3>
+<h3 class="sub">Frameworks</h3>
 <ul>
     <li>ASP.NET</li>
     <li>Django</li>
 </ul>
 
-<h3>Databases</h3>
+<h3 class="sub">Databases</h3>
 <ul>
     <li>Microsoft SQL Server 2012/2014</li>
 </ul>
 
-<h3>Classes taken or currently taking</h3>
-<p>Data Structures, Operating Systems, Computer Networking and Architecture, Computer Hardware, C++ Programming, Web Design, Advanced Networks, Security, and Cryptography, Programming Languages and Systems, Web Application Development, Linux, Computer Organization and Architecture, Intro to Robotics, Software Development, Computer Algorithms</p>
+<h3 class="sub">Classes taken or currently taking</h3>
+<p class="subp">Data Structures, Operating Systems, Computer Networking and Architecture, Computer Hardware, C++ Programming, Web Design, Advanced Networks, Security, and Cryptography, Programming Languages and Systems, Web Application Development, Linux, Computer Organization and Architecture, Intro to Robotics, Software Development, Computer Algorithms</p>
 
 <h2>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h2>
 
-<h3>Raspberry Pi Home Server</h3>
-<h4>www.jtberglund.ddns.net</h4>
-<p>Turned a raspberry pi (model B+) into a home server that provides the functionality of a web server, an FTP server, an NAS server, and provides cloud storage (similar to DropBox). Hosted using Apache web server and implemented using services such as OwnCloud, MySQL, SSH, Samba, Transmission, and Webmin.</p>
+<h3 class="sub">Raspberry Pi Home Server</h3>
+<h5 class="sub"><a href="www.jtberglund.ddsn.net">www.jtberglund.ddns.net</a></h5>
+<p class="subp">Turned a raspberry pi (model B+) into a home server that provides the functionality of a web server, an FTP server, an NAS server, and provides cloud storage (similar to DropBox). Hosted using Apache web server and implemented using services such as OwnCloud, MySQL, SSH, Samba, Transmission, and Webmin.</p>
 
-<h3>Security Monitoring Application</h3>
-<p>This desktop application was built in Java, with various command-line utilities to access computer information. The application tracks CPU processes and memory usage. Features of the application include a running log of transactions and listings of all open TCP/IP ports and all the applications and processes listening on those ports. Logs in the application include a list of all websites visited by IP address. The application also contains a custom RSS feed from a selected security website and displays headlines of site events.</p>
+<h3 class="sub">Security Monitoring Application</h3>
+<p class="subp">This desktop application was built in Java, with various command-line utilities to access computer information. The application tracks CPU processes and memory usage. Features of the application include a running log of transactions and listings of all open TCP/IP ports and all the applications and processes listening on those ports. Logs in the application include a list of all websites visited by IP address. The application also contains a custom RSS feed from a selected security website and displays headlines of site events.</p>
 
-<h3>Web-based "Guess Who" Game</h3>
-<p>This game is a web-based imitation of the classic board game, “Guess Who,” a turn-based game in which two players face off to guess the other player’s “secret character” through elimination and outright guessing. Website was built using HTML/CSS and ASP.NET on the back-end. </p>
+<h3 class="sub">Web-based "Guess Who" Game</h3>
+<p class="subp">This game is a web-based imitation of the classic board game, “Guess Who,” a turn-based game in which two players face off to guess the other player’s “secret character” through elimination and outright guessing. Website was built using HTML/CSS and ASP.NET on the back-end. </p>
         </section>
 
         <aside id="sidebar">
