--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 -->
 
 <h2>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
+<a id="work_experience" class="anchor" href="#work_experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Work Experience</h2>
 
 <h3 class="sub">Teacher's Assistant / Grader</h3>
 <h4 class="sub">The Master's College Computer Science Department</h4>
@@ -68,7 +68,7 @@
 <p class="subp">My responsibilities included setting up and tearing down equipment for various athletic events, including sports games and meets. Additionally, I was responsible for maintaining and thoroughly cleaning both the fields and gyms before and after events. During events, I also worked in concessions, and sold tickets and merchandise. This job presented me with a diverse work experience, as I worked on tasks ranging from garden-tending and painting to rearranging various work spaces and selling various goods.</p>
 
 <h2>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
 
 <h3 class="sub">The Master's College - 2016</h3>
 <h3 class="sub">Computer Science</h3>
@@ -76,7 +76,7 @@
 <h3 class="sub">President's List - Five semesters running</h3>
 
 <h2>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical</h2>
+<a id="technical" class="anchor" href="#technical" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical</h2>
 
 <h3 class="sub">Languages</h3>
 <ul>
