--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <h3 class="sub">Raspberry Pi Home Server</h3>
 <p class="subp">Turned a raspberry pi (model B+) into a home server that provides the functionality of a web server, an FTP server, an NAS server, and provides cloud storage (similar to DropBox). Hosted using Apache web server and implemented using services such as OwnCloud, MySQL, SSH, Samba, Transmission, and Webmin.</p>
 
-<h3 class="sub">Security Monitoring Application</h3>
+<a id="a" class="anchor" href="https://github.com/jtberglund/Security-Monitor" aria-hidden="true"><h3 id="Security-Monitor" class="sub">Security Monitoring Application</h3></a>
 <p class="subp">This desktop application was built in Java, with various command-line utilities to access computer information. The application tracks CPU processes and memory usage. Features of the application include a running log of transactions and listings of all open TCP/IP ports and all the applications and processes listening on those ports. Logs in the application include a list of all websites visited by IP address. The application also contains a custom RSS feed from a selected security website and displays headlines of site events.</p>
 
 <h3 class="sub">Web-based "Guess Who" Game</h3>
