--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 <h3 class="sub">Raspberry Pi Home Server</h3>
 <p class="subp">Turned a raspberry pi (model B+) into a home server that provides the functionality of a web server, an FTP server, an NAS server, and provides cloud storage (similar to DropBox). Hosted using Apache web server and implemented using services such as OwnCloud, MySQL, SSH, Samba, Transmission, and Webmin.</p>
 
-<a id="a" class="anchor" href="https://github.com/jtberglund/Security-Monitor" aria-hidden="true"><h3 id="Security-Monitor" class="sub">Security Monitoring Application</h3></a>
+<a class="anchor" href="https://github.com/jtberglund/Security-Monitor" aria-hidden="true"><h3 id="sec-mon" class="sub">Security Monitoring Application</h3></a>
 <p class="subp">This desktop application was built in Java, with various command-line utilities to access computer information. The application tracks CPU processes and memory usage. Features of the application include a running log of transactions and listings of all open TCP/IP ports and all the applications and processes listening on those ports. Logs in the application include a list of all websites visited by IP address. The application also contains a custom RSS feed from a selected security website and displays headlines of site events.</p>
 
-<h3 class="sub">Web-based "Guess Who" Game</h3>
+<a class="anchor" href="https://github.com/jtberglund/Reckon" aria-hidden="true"><h3 id="reckon" class="sub">Reckon - A Web-based "Guess Who" Game</h3></a>
 <p class="subp">This game is a web-based imitation of the classic board game, “Guess Who,” a turn-based game in which two players face off to guess the other player’s “secret character” through elimination and outright guessing. Website was built using HTML/CSS and ASP.NET on the back-end. </p>
         </section>
 
