--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h3>Summary</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    <p>Dedicated student studying Computer Science at The Master’s College. I am a hard-working individual who is detail-oriented and looks forward to challenges and learning as much as I can at every opportunity. I learn quickly and understand the tasks required of me. My work experience includes individual efforts as well as team efforts. I have a strong work ethic and am willing to learn and do my best with all I am given.
                     </p>
                 </div>
             </div>
@@ -337,11 +337,7 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
-                    </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-12">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
@@ -351,10 +347,6 @@
                                 <a href="https://www.linkedin.com/in/jtberglund" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
                     </div>
                 </div>
             </div>
