CS302 Software Dev project - added AMD system diagrams

--- a/cabezon/pages/amd.html
+++ b/cabezon/pages/amd.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cabezón - Point-Of-Sale System</title>
+    <title>Cabezón - Automated Meal Dispersal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -276,11 +276,11 @@
                         <li>
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
-                        <li class="active">
+                        <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Sales<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a class="active" href="pos.html">Point-Of-Sale System</a>
+                                    <a href="pos.html">Point-Of-Sale System</a>
                                 </li>
                                 <li>
                                     <a href="mms.html">Merchandise Management System</a>
@@ -288,14 +288,14 @@
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="#"><i class="fa fa-cutlery fa-fw"></i> Feeding<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="flot.html">Scheduler</a>
                                 </li>
                                 <li>
-                                    <a href="amd.html">Automated Meal Dispersal</a>
+                                    <a class="active" href="morris.html">Automated Meal Dispersal</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -327,7 +327,13 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Point-Of-Sale System</h1>
+                        <h1 class="page-header">Automated Meal Dispersal System</h1>
+                        <h2><small>Authentication:</small></h2>
+                      <div><img style="width: 100%;" src="../images/AMDAuthentication.png" alt=""></div>
+                        <h2><small>Schedule Update:</small></h2>
+                          <div><img style="width: 100%;" src="../images/AMDScheduling.png" alt=""></div>
+                        <h2><small>Automated Meal Dispersal:</small></h2>
+                          <div><img style="width: 100%;" src="../images/AMD.png" alt=""></div>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -335,7 +341,7 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">Lorem ipsum</div>
+                    <h1></h1>
                 </div>
                 <!-- /.row -->
             </div>
