--- a/cabezon/pages/index.html
+++ b/cabezon/pages/index.html
@@ -295,7 +295,7 @@
                                     <a href="flot.html">Scheduler</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Automated Meal Dispersal</a>
+                                    <a href="amd.html">Automated Meal Dispersal</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
