--- a/cabezon/pages/mms.html
+++ b/cabezon/pages/mms.html
@@ -295,7 +295,7 @@
                                     <a href="flot.html">Scheduler</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Automated Meal Dispersal</a>
+                                    <a href="amd.html">Automated Meal Dispersal</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -336,11 +336,32 @@
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h1><small>Proposal</small></h1>
+                    <h1><small>Proposed Software Process Model</small></h1>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-12"></div>
+                  <div class="col-lg-12">
+                    <p>The Cabezón Merchandise Management System is a software system designed to manage and track the inventories of the various stores and restaurants throughout the park. Since the park already has many systems in place as well as staff operating the park, it is imperative that the various needed systems are developed as fast as possible to get the park fully functional. To accomplish this task, an agile software development approach is needed.</p>
+                    <h4><small>Advantages of an Agile software development approach:</small></h4>
+                    <ul>
+                      <li>Stakeholders (park employees) have opportunities to test the MMS early and often, allowing for constant feedback so changes can be made rapidly.</li>
+                      <li>Users are able to get accustomed to the software early on.</li>
+                      <li>A basic, yet fully operational version of the MMS software can be developed very quickly so the park can be operational at a sooner date.</li>
+                      <li>Development is able to be user-focused, giving the stakeholders a say in what changes are made.</li>
+                      <li>Changes in user requirements are easily incorporated.</li>
+                      <li>Predictable and scheduled releases.</li>
+                      <li>Breaking the software into manageable units allows the developers to focus on testing, providing frequent builds, and improving the overall quality of the software. </li>
+                    </ul>
+                    <h4><small>Disadvantages of a Waterfall software development approach:</small></h4>
+                    <ul>
+                      <li>There is a lot of time taken to gather requirements and document the software during development.</li>
+                      <li>Less predictable release timetable.</li>
+                      <li>If there are any changes that must be made after the software is released, it is much harder to go back and make those changes.</li>
+                      <li>There is very little (if any) user feedback during development, and incorporating user feedback later on becomes complicated.</li>
+                      <li>Late testing of the software leads to more delays.</li>
+                      <li>Very rigid and inflexible development schedule. </li>
+                    </ul>
+                  </div>
                 </div>
                  <div class="row">
                     <div class="col-lg-12">
